# malenia

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: results_extraction.ipynb
malenia/: __init__.py  cdd.m  cdd.py  cv.py  dataset.py  internal_cv_extractor.py  launch.py  launch_utils.py  metrics.py  results.py  results_test.py  results_utils.py  save_and_load.py  thread.py  thread_slurm.py  util_checkers.py  util_tests.py
malenia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
malenia/clustering/: __init__.py  clustering_aux.py  clustering_launch.py  clustering_thread.py  clustering_thread_train_split.py
malenia/data_augmentation/: __init__.py  _utils.py  aug.py  aug_techniques.py
malenia/feature_selection/: __init__.py  _utils.py  feature_importance.py  feature_selector.py
malenia/methods/: __init__.py  _base_saver_transformer.py  _binary_decomposition_forest.py  _custom_logistic_at.py  _custom_logistic_at_test.py  _ordinal_random_forest.py
malenia/methods/my_stc/: custom_rst.py  custom_stc.py  main.py  my_random_st_debugging.py  my_stc.py  random_dilated_st.py
malenia/results/: __init__.py  recol_utils_global.py  recol_utils_scatter_plot.py  recol_utils_toexcel.py  recol_utils_toexcel_aux.py  results.py  results_utils.py
malenia/results/_tests/: results_test.py
malenia/results/exports/: __init__.py  latex.py
malenia/results/fancy/: __init__.py
malenia/results/plots/: __init__.py  boxplot.py  cdd.py  cdd_aux.py  (+3 more)
ml_lab/: test.py
ml_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+298 files in other folders)
